<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.AddBusinessCardActivity">

    <EditText
        android:id="@+id/activity_add_business_card_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:hint="@string/activity_add_business_card_name"/>

    <EditText
        android:id="@+id/activity_add_business_card_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:hint="@string/activity_add_business_card_role"/>

    <EditText
        android:id="@+id/activity_add_business_card_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:hint="@string/activity_add_business_card_company_name"/>

    <EditText
        android:id="@+id/activity_add_business_card_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/activity_add_business_card_email"/>

    <EditText
        android:id="@+id/activity_add_business_card_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="phone"
        android:inputType="phone"
        android:hint="@string/activity_add_business_card_phone"/>

    <Button
        android:id="@+id/activity_add_business_card_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_business_card_save" />

</LinearLayout>